--- a/HRM/HRM.csproj
+++ b/HRM/HRM.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Components\Home\" />
     <Folder Include="Data\" />
+    <Folder Include="Image\" />
   </ItemGroup>
 
   <ItemGroup>
