Finish task Create Configure Information

--- a/HRM/HRM.csproj
+++ b/HRM/HRM.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Components\Home\" />
+    <Folder Include="Components\Personel\Modal\" />
     <Folder Include="Data\" />
     <Folder Include="Image\" />
   </ItemGroup>
