Finish task payroll

--- a/HRM/HRM.csproj
+++ b/HRM/HRM.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Components\Home\" />
     <Folder Include="Components\Personel\Modal\" />
+    <Folder Include="Components\Personel\Salary\" />
     <Folder Include="Data\" />
     <Folder Include="Image\" />
   </ItemGroup>
