Finish task export salary current to excel

--- a/HRM/HRM.csproj
+++ b/HRM/HRM.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="MudBlazor" Version="5.1.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="19.3.0.54" />
   </ItemGroup>
 
 </Project>
