Giao diện login và register

--- a/HRM/appsettings.json
+++ b/HRM/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=HRM;Username=postgres;Password=sang1411",
+    "DefaultConnection": "Host=localhost;Port=5432;Database=HRM;Username=postgres;Password=huy0938897502",
     "HRMIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HRM;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
